build: bundle demo HTML via extraResources for packaged app

--- a/desktop-console/package.json
+++ b/desktop-console/package.json
@@ -21,10 +21,10 @@
       "main.js",
       "preload.js"
     ],
-    "extraFiles": [
+    "extraResources": [
       {
         "from": "..",
-        "to": "app",
+        "to": ".",
         "filter": [
           "agentic-control-demo.html"
         ]
